# fake-news-transformers

./: .gitignore  .pre-commit-config.yaml  Makefile  README.rst  pyproject.toml  requirements.txt
fake_news/: architecture.py  config.py  make_data.py  predict.py  train.py  training_stats.txt
fake_news/logs/: log - 2023-02-09_19-29-33.txt  log - 2023-02-11_16-25-55.txt  log - 2023-02-11_21-01-32.txt  log - 2023-02-11_21-51-22.txt  log - 2023-02-14_14-11-02.txt  log - 2023-02-14_14-14-32.txt  log - 2023-02-14_16-13-23.txt  log - 2023-03-01_22-13-22.txt
fake_news/tensorboard/: events.out.tfevents.1675950275.kamalshrestha.176353.0  events.out.tfevents.1676128596.kamalshrestha.181195.0  events.out.tfevents.1676132483.l1055-00.2664794.0  events.out.tfevents.1676363163.kamalshrestha.32617.0  events.out.tfevents.1676364276.l1055-00.3784075.0  events.out.tfevents.1676370521.kamalshrestha.92527.0  events.out.tfevents.1677688104.kamalshrestha.15288.0
playground/: playground.ipynb  preprocessing.ipynb
tests/: test_fake_news.py
