[tool.poetry]
name = "fake-news"
version = "0.1.0"
description = ""
authors = ["kamal-shrestha <kamalandshrestha@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
notebook = "^6.5.2"
pandas = "^1.5.3"
transformers = "^4.26.0"
scikit-learn = "^1.2.1"
matplotlib = "^3.6.3"
torch = "^1.13.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"
notebook = "^6.5.2"
black = "^23.1.0"
loguru = "^0.6.0"
tensorboard = "^2.11.2"
python-dotenv = "^0.21.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
